finish products swagger docs
